fix(segundo): implementacion seg v2
