# SecurityService/src/main/java/com/romero/seguridad/auth/AuthenticationResponse.java
@@ -6,14 +6,14 @@ import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
-@Data
-@Builder
-@AllArgsConstructor
-@NoArgsConstructor
-public class AuthenticationResponse {
-
-  @JsonProperty("access_token")
-  private String accessToken;
-  @JsonProperty("refresh_token")
-  private String refreshToken;
-}
+//@Data
+//@Builder
+//@AllArgsConstructor
+//@NoArgsConstructor
+//public class AuthenticationResponse {
+//
+//  @JsonProperty("access_token")
+//  private String accessToken;
+//  @JsonProperty("refresh_token")
+//  private String refreshToken;
+//}
